--- a/npc/yaml_for_reading/dndFiveEChar.example.yml
+++ b/npc/yaml_for_reading/dndFiveEChar.example.yml
@@ -3,46 +3,46 @@ characters:
   player_info:
     discord_id: '187947264825102400'
     player_name: parkervcp
-  hit_points:
-    max: 15
-    current: 10
-    temp: 0
   stats:
-    strength: 5
-    dexterity: 5
-    constitution: 5
-    intelligence: 5
-    wisdom: 5
-    charisma: 5
-  armor_class: 10
-  initiative: 3
-  speed:
-    feet: 30
-  skills:
-    intimidation: true
-  passive_wisdom: 0
+    experience_points: 15
+    hit_points:
+      max: 20
+      current: 15
+      temp: 0
+    abilities:
+      strength: 
+        score: 11
+      dexterity: 
+        score: 12
+      constitution: 
+        score: 13
+      intelligence: 
+        score: 14
+      wisdom: 
+        score: 16
+      charisma: 15
+    armor_class: 10
+    initiative: 15
+    speed:
+      feet: 30
+    inspiration_points: 5
+    proficiency_bonus: 3
+    passive_wisdom: 2
+    skills:
+      percetption: true
+      persuasion: true
+      other:
+        - id: 0
+          skill_name: Attack Roll
+          description: You add your Dexterity modifier to your attack roll and your damage roll when attacking with a ranged weapon, such as a sling or a longbow. You can also add your Dexterity modifier to your attack roll and your damage roll when attacking with a melee weapon that has the finesse property, such as a dagger or a rapier.
+          base_stat: dex
+          trained: true
+  purse:
+    gold: 5
+    silver: 10
+    copper: 35
+  equipment:
+    - id: 0 
+      name: 
+      quantity: 1
   details:
-    name:
-      title: Sir
-      first: Nikolai
-      middle: Brunswik
-      last: Robanov
-      honorific: The Quick Footed
-    experience_points: 10
-    race_id: 4
-    alignment:
-      gve: 0 ## Good V Evil 1=good, 0=neutral, -1=evil
-      lvc: 1 ## Lawful V Chaos 1=lawful, 0=neutral, -1=chaotic
-    age: 57
-    height: ## accepts both feet/inch and centimeter
-      feet: 4
-      inches: 8
-    weight: ## accepts both pounds/ounces and grams
-      pounds: 185
-      ounces: 14
-    hair_color: Gray
-    eye_color: Gray
-    skin_color: Light Tan
-    language_ids:
-      - 1
-      - 3
